# stitch

./: .gitmodules  Cargo.toml
crates/stitch/: Cargo.toml
crates/stitch-bindings/: Cargo.toml
crates/stitch-bindings/src/: lib.rs
crates/stitch-test-calc/: Cargo.toml
crates/stitch-test-calc/src/: main.rs
crates/stitch/src/: ast.rs  cfg.rs  encode.rs  interp.rs  ir.rs  lib.rs  main.rs  parse.rs  post.rs  spec.rs  util.rs
crates/stitch/src/ast/: expr.rs  func.rs  ty.rs
crates/stitch/src/cfg/: dom_tree.rs  dot.rs  from_ast.rs  loops.rs  merge_blocks.rs  predecessors.rs  printer.rs  remove_unreachable_blocks.rs  rpo.rs  to_ast.rs
crates/stitch/src/interp/: concrete.rs  spec.rs
crates/stitch/src/interp/spec/: expr.rs  preprocess.rs
crates/stitch/src/ir/: expr.rs  func.rs  ty.rs  value.rs
crates/stitch/src/post/: replace_intrinsics.rs
crates/stitch/src/util/: float.rs  iter.rs  slot.rs
crates/stitch/wat/: arith.wat  calc.wat
crates/tuna/: Cargo.toml
crates/tuna/src/: args.rs  file.rs  lib.rs  main.rs  util.rs  vm.rs
crates/tuna/tests/: common.rs  gc.rs  parser.rs  som_test_suite.rs  vm.rs
src/: args.rs  ast.rs  file.rs  lib.rs  location.rs  main.rs  parse.rs  sourcemap.rs  util.rs  vm.rs
src/ast/: visit.rs
src/parse/: cursor.rs  lexer.rs  parser.rs  token.rs
src/vm/: error.rs  eval.rs  exec.rs  frame.rs  gc.rs  method.rs  value.rs
tests/: common.rs  gc.rs  parser.rs  som_test_suite.rs  vm.rs
tests/parser/: escape-sequences.som  hello-comments.som  hello-world.som  primitive.som  whitespace.som
tests/parser/fail/: assign-to-self.som  assign-to-super.som  big-int-literal.som  big-neg-int-literal.som  block-param-name-collision.som  class-primitive.som  (+27 more)
(+46 files in other folders)
