[package]
name = "stitch"
version = "0.0.1"
edition = "2021"

[dependencies]
miette = { version = "5.10", features = ["fancy"] }
phf = { version = "0.11", features = ["macros"] }
thiserror = "1.0"

[dev-dependencies]
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
test-generator = "0.3.1"
