[package]
name = "stitch"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
fxhash = "0.2.1"
miette = { version = "5.10", features = ["fancy"] }
phf = { version = "0.11", features = ["macros"] }
thiserror = "1.0"

[dev-dependencies]
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
test-generator = "0.3.1"
