[package]
name = "stitch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bitflags = "2.4.2"
bitvec = "1.0.1"
hashbrown = "0.14.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"
regex = { version = "1.10.3", default-features = false, features = ["std", "perf"] }
slotmap = "1.0.6"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.50"
wasm-encoder = { version = "0.36.1", features = ["wasmparser"] }
wasmparser = "0.116.0"
